# ziffers-python

./: .gitignore  :  LICENSE.txt  MANIFEST.in  README.md  defaults.ini  example.musicxml  main.py  pyproject.toml  repl.py  test.py
examples/: music21_example.py
examples/csound/: play_with_csound.py
examples/jupyter/: test_jupylet.ipynb  test_music21.ipynb
examples/music21/: create_midi_file.py  create_musicxml.py  create_png.py  music21_example.py  music21_example_2.py  show_in_musescore.py
examples/music21/output/: example.musicxml  ziffers_example.mid  ziffers_example.xml
examples/sonicsynth/: play_with_sonicsynth.py  test_arpeggio_effect.py
tests/: __init__.py  run_tests.py  test_multi_03.py  test_parser.py  test_scale.py  test_scale_01.py  test_singular_02.py
ziffers/: __init__.py  classes.py  common.py  converters.py  defaults.py  ebnf.py  generators.py  mapper.py  parser.py  scale.py  ziffers.lark
ziffers/classes/: __init__.py  items.py  root.py  sequences.py
ziffers/spec/: scala.lark  ziffers.lark
